# iron-pastebin

./: Cargo.toml  README.md  hmac_key.txt
src/: main.rs
static/: webupload.html
templates/: help.hbs  index.hbs  paste_html.hbs
