[package]
name = "pastebin"
version = "0.1.0"
authors = ["Oliver Jensen <ojensen5115@gmail.com>"]

#[features]
#watch = ["handlebars-iron/watch"]

[dependencies.iron]
version = "0.4.0"

[dependencies]
router = "0.4.0"
params = "0.5.1"
bodyparser = "0.4.1"
urlencoded = "*"
handlebars-iron = "*"

rand = "0.3.15"
syntect = "1.0.2"
rust-crypto = "^0.2"
lazy_static = "0.2.2"
