[package]
name = "pastebin"
version = "0.1.0"
authors = ["Oliver Jensen <ojensen5115@gmail.com>"]

[dependencies.iron]
version = "0.4.0"

[dependencies]
router = "0.4.0"
params = "0.5.1"
bodyparser = "0.4.1"
urlencoded = "*"
handlebars-iron = "*"
staticfile = "*"
mount = "*"

rand = "0.3.15"
syntect = "1.0.3"
rust-crypto = "^0.2"
lazy_static = "0.2.2"
chrono = "*"